docs(@taxi/button): added source to documents of button component
affects: @taxi/button

--- a/packages/button/src/Button.story.mdx
+++ b/packages/button/src/Button.story.mdx
@@ -36,6 +36,8 @@ This is line about this component. `Enjoy!`
 
 ---
 
+<Source dark={true} id="component-button--primary" />
+
 ---
 
 ### Dit is nog een regel om te lezen.
