docs(@taxi/button): added description to markdown and added stories of other variants of button
affects: @taxi/button

--- a/packages/button/src/Button.story.mdx
+++ b/packages/button/src/Button.story.mdx
@@ -1,9 +1,11 @@
-import { Meta, Story, Preview, Props, Source } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Preview, Props, Source, Description } from '@storybook/addon-docs/blocks';
 import { Button } from './';
 
 <Meta title="Component|All Buttons" component={Button} />
 
 # Button
+
+<Description of={Button} />
 
 This is line about this component. `Enjoy!`
 
