WIP(@taxi/button,@taxi/input): change size prop to sizeVariant and added variants to input component
affects: @taxi/button, @taxi/input

--- a/packages/button/src/Button.story.mdx
+++ b/packages/button/src/Button.story.mdx
@@ -13,7 +13,7 @@ This is line about this component. `Enjoy!`
 
 <Preview>
   <Story name="default">
-    <Button size="tiny" variant="default" type="button">
+    <Button sizeVariant="tiny" variant="default" type="button">
       {text('Value', 'Button')}
     </Button>
   </Story>
@@ -23,12 +23,12 @@ This is line about this component. `Enjoy!`
     </Button>
   </Story>
   <Story name="warning">
-    <Button size="large" variant="warning" type="button">
+    <Button sizeVariant="large" variant="warning" type="button">
       Button
     </Button>
   </Story>
   <Story name="danger">
-    <Button size="large" variant="danger" type="button">
+    <Button sizeVariant="large" variant="danger" type="button">
       Button
     </Button>
   </Story>
@@ -46,7 +46,7 @@ This is line about this component. `Enjoy!`
 
 <SourceComponent
   code={`
-<Button size="large" variant="danger" type="button">
+<Button sizeVariant="large" variant="danger" type="button">
   Button
 </Button>
 `}
